Refactoring, corrections and new code for template filling.

--- a/media/CodeSystem.mustache
+++ b/media/CodeSystem.mustache
@@ -4,9 +4,9 @@
 {{#caseSensitive}}
     "caseSensitive": {{{caseSensitive}}},
 {{/caseSensitive}}
-{{#valueSet}}
-    "valueSet": "{{{valueSet}}}",
-{{/valueSet}}
+{{#canonicalValueSet}}
+    "valueSet": "{{{canonicalValueSet}}}",
+{{/canonicalValueSet}}
 {{#hierarchyMeaning}}
     "hierarchyMeaning": "{{{hierarchyMeaning}}}",
 {{/hierarchyMeaning}}
