--- a/media/common.mustache
+++ b/media/common.mustache
@@ -1,9 +1,9 @@
 {{#url}}
     "url": "{{{url}}}",
 {{/url}}
-{{#vers}}
-    "version": "{{{vers}}}",
-{{/vers}}
+{{#version}}
+    "version": "{{{version}}}",
+{{/version}}
 {{#name}}
     "name": "{{{name}}}",
 {{/name}}
