Added missing HTML elements. Started to work in CSV parsing and JSON generation.

--- a/media/ValueSet.mustache
+++ b/media/ValueSet.mustache
@@ -6,7 +6,7 @@
 {{/immutable}}
     "compose": {
         "include": [{
-            "system": "{{valuesetComposeIncludeSystem}}",
+            "system": "{{system}}",
             "concept": {{{concept}}}
         }]
     }
