Finished adding concepts into the resulting JSON. Started evaluating regex on fields with patterns.

--- a/media/CodeSystem.mustache
+++ b/media/CodeSystem.mustache
@@ -23,5 +23,5 @@
     "count": {{{count}}},
 {{/count}}
     "content": "{{content}}",
-    "concept": {{{concept}}}
+    "concept": {{{concepts}}}
 }
