--- a/media/ValueSet.mustache
+++ b/media/ValueSet.mustache
@@ -7,7 +7,7 @@
     "compose": {
         "include": [{
             "system": "{{system}}",
-            "concept": {{{concept}}}
+            "concept": {{{concepts}}}
         }]
     }
 }
