--- a/media/custom.css
+++ b/media/custom.css
@@ -1,3 +1,8 @@
+body {
+    font-family: sans-serif;
+    font-weight: bold;
+}
+
 .radiogroup {
     display: inline-grid;
     grid-auto-flow: dense;
