Generating FSH content.

--- a/resources/templates/ValueSet.mustache
+++ b/resources/templates/ValueSet.mustache
@@ -7,7 +7,7 @@
     "compose": {
         "include": [{
         {{#system}}
-            "system": "{{system}}",
+            "system": "{{{system}}}",
         {{/system}}
             "concept": {{{concepts}}}
         }]
