--- a/resources/templates/common.mustache
+++ b/resources/templates/common.mustache
@@ -10,7 +10,7 @@
 {{#title}}
     "title": "{{{title}}}",
 {{/title}}
-    "status": "{{status}}",
+    "status": "{{{status}}}",
 {{#experimental}}
     "experimental": {{{experimental}}},
 {{/experimental}}
